--- a/src/Components/Quiz/Quiz.css
+++ b/src/Components/Quiz/Quiz.css
@@ -41,7 +41,7 @@
     margin: auto;
     width: 250px;
     max-height: 65px;
-    background: #553f9a;
+    background: #3dbd81;
     color: #fff;
     font-size: 25px;
     font-weight: 500;
