--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
 body{
 
   min-height: 100vh;
-  background-image: linear-gradient(#e5f744de, #5bebf0);
+  background-image: linear-gradient(#bd1212de, #5d0ae2);
   font-family: 'poppins';
 
 }
