--- a/src/Components/Quiz/Quiz.css
+++ b/src/Components/Quiz/Quiz.css
@@ -41,12 +41,13 @@
     margin: auto;
     width: 250px;
     max-height: 65px;
-    background: #3dbd81;
-    color: #fff;
+    background: #ada207;
+    color: #ffffff;
     font-size: 25px;
     font-weight: 500;
     border-radius: 8px;
     cursor: pointer;
+    padding: 10px;
 }
 
 .container .index{
